# bend-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
assets/: com.bend.databending.desktop  icon.icns
openspec/: project.md
openspec/changes/archive/2026-04-21-refactor-split-app-state/: design.md  tasks.md
openspec/changes/archive/2026-04-25-refactor-flatten-hex-editor-show/: tasks.md
openspec/changes/bend-rs/: README.md  proposal.md  tasks.md
openspec/changes/bend-rs/specs/format-awareness/: spec.md
openspec/changes/bend-rs/specs/hex-editor/: spec.md
openspec/changes/refactor-flatten-hex-editor-show/: proposal.md  tasks.md
openspec/changes/refactor-flatten-hex-editor-show/specs/hex-editor/: spec.md
openspec/changes/refactor-split-app-state/: design.md  proposal.md  tasks.md
openspec/specs/hex-editor/: spec.md
scripts/: distribute-tasks.sh  generate-linux-icons.sh  install-linux-desktop.sh  uninstall-linux-desktop.sh
src/: app.rs  main.rs  settings.rs
src/app/: dialogs.rs  input.rs  menu_bar.rs  mod.rs  preview.rs  sections.rs  state.rs  toolbar.rs
src/editor/: bookmarks.rs  buffer.rs  cursor.rs  go_to_offset.rs  history.rs  mod.rs  modes.rs  savepoints.rs  search.rs  selection.rs
src/formats/: bmp.rs  bytes.rs  gif.rs  jpeg.rs  mod.rs  png.rs  traits.rs
src/ui/: bookmarks.rs  go_to_offset_dialog.rs  hex_editor.rs  image_preview.rs  mod.rs  savepoints.rs  search_dialog.rs  settings_dialog.rs  shortcuts_dialog.rs  structure_tree.rs  theme.rs
tasks/: README.md  backend.md  frontend.md  infrastructure.md
(+1 files in other folders)
