[package]
name = "bend-rs"
version = "0.1.0"
edition = "2021"
description = "A cross-platform databending application for glitch art"
license = "MIT"

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }

# Native file dialogs
rfd = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
